apps/base/memos/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: memos
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
        app.kubernetes.io/name: memos
        app.kubernetes.io/instance: memos
    spec:
      containers:
        - name: memos
          image: neosmemo/memos:stable
          ports:
            - containerPort: 5230
              name: http-memos
          volumeMounts:
            - name: memos-data
              mountPath: /var/opt/memos
          resources:
            requests:
              cpu: "10m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: memos-data
          persistentVolumeClaim:
            claimName: memos-data-pvc
