apps/base/memos/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: memos
  namespace: memos
spec:
  selector:
    app: memos
  ports:
    - name: http-memos
      protocol: TCP
      port: 5230
      targetPort: http-memos
