apps/base/memos/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos
  namespace: memos
spec:
  ingressClassName: traefik
  rules:
    - host: memos.localho.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memos
                port:
                  name: http-memos
