apps/base/memos/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: memos-route
  namespace: memos
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - memos.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: memos
          port: 5230
